Added the handler of failures

--- a/CourceWork.ipynb
+++ b/CourceWork.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 270,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 271,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 272,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 273,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -381,20 +381,26 @@
    ],
    "source": [
     "def create_csv_file(data: list[list], file_name):\n",
-    "   with open(file_name, 'w', newline='', encoding='utf-8') as csvfile:\n",
-    "      csvwriter = csv.writer(csvfile)\n",
-    "      csvwriter.writerows(data)\n",
-    "   print(f'CSV файл {file_name} успешно создан.')\n",
+    "   try:\n",
+    "      with open(file_name, 'w', newline='', encoding='utf-8') as csvfile:\n",
+    "         csvwriter = csv.writer(csvfile)\n",
+    "         csvwriter.writerows(data)\n",
+    "      print(f'CSV файл {file_name} успешно создан.')\n",
+    "   except:\n",
+    "      print(f'Ошика при создании файла с именем - {file_name}')\n",
     "\n",
     "def read_data(file_name='orders.csv'):\n",
     "   data = []\n",
-    "   with open(file_name, 'r', newline='', encoding='utf-8') as csvfile:\n",
-    "      csvreader = csv.reader(csvfile)\n",
+    "   try:\n",
+    "      with open(file_name, 'r', newline='', encoding='utf-8') as csvfile:\n",
+    "         csvreader = csv.reader(csvfile)\n",
     "\n",
-    "      next(csvreader)\n",
-    "    \n",
-    "      for row in csvreader:\n",
-    "         data.append(row)\n",
+    "         next(csvreader)\n",
+    "      \n",
+    "         for row in csvreader:\n",
+    "            data.append(row)\n",
+    "   except:\n",
+    "      print(f\"Ошибка чтения файла - {file_name}\")\n",
     "\n",
     "   return data\n",
     "\n",
@@ -404,7 +410,7 @@
     "      df.index = [''] * len(df['Номер заказа'])\n",
     "      display(df)\n",
     "   except:\n",
-    "      print(\"Проблемы с чтением фала\")\n",
+    "      print(f\"Проблемы с чтением фала - {file}\")\n",
     "\n",
     "show_csv_table()"
    ]
@@ -418,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 274,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -475,21 +481,7 @@
     "          percent = (float(product[6]) / revenue) * 100\n",
     "          percent_list.append(round(percent, 1))\n",
     "      \n",
-    "       return percent_list\n",
-    "    \n",
-    "    def get_data_sorted_by_percents(self):\n",
-    "       percents = self.calc_percent_of_revenue_int()\n",
-    "       sorted_percents = quick_sort(self.calc_percent_of_revenue_int())\n",
-    "       data = self.data\n",
-    "       for i in range(len(data)):\n",
-    "          data[i].append(percents[i])\n",
-    "       \n",
-    "       new_data = self.data\n",
-    "       for i in range(len(sorted_percents)):\n",
-    "          for j in range(len(data)):\n",
-    "             if sorted_percents[i] == data[j][-1]:\n",
-    "                new_data[i] = data[j]\n",
-    "       return new_data"
+    "       return percent_list"
    ]
   },
   {
@@ -501,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 275,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -569,7 +561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 276,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -642,7 +634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 277,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -710,7 +702,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 278,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -787,7 +779,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 283,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1029,7 +1021,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 280,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
