--- a/CourceWork.ipynb
+++ b/CourceWork.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,12 +134,54 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Бинарный поиск"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def binary_search(arr, target, index=None):\n",
+    "    if index == None:\n",
+    "        left = 0\n",
+    "        right = len(arr) - 1\n",
+    "        \n",
+    "        while left <= right:\n",
+    "            mid = (left + right) // 2\n",
+    "            if arr[mid] == target:\n",
+    "                return mid  \n",
+    "            elif arr[mid] < target:\n",
+    "                left = mid + 1  \n",
+    "            else:\n",
+    "                right = mid - 1  \n",
+    "    else:\n",
+    "        left = 0\n",
+    "        right = len(arr) - 1\n",
+    "        \n",
+    "        while left <= right:\n",
+    "            mid = (left + right) // 2\n",
+    "            if arr[mid][index] == target:\n",
+    "                return mid  \n",
+    "            elif arr[mid][index] < target:\n",
+    "                left = mid + 1  \n",
+    "            else:\n",
+    "                right = mid - 1  \n",
+    "\n",
+    "    return -1  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Методы создания и чтения даты из csv файла"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -424,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -493,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -561,7 +603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -634,7 +676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -702,7 +744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -779,7 +821,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1021,7 +1063,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1271,13 +1313,104 @@
    "source": [
     "csv_data = read_data('orders.csv')\n",
     "array = quick_sort(csv_data, 2)\n",
+    "\n",
     "titles = (['Номер заказа', 'Дата заказа', 'Название товара', 'Категория товара', 'Количество продаж', 'Цена за единицу', 'Общая стоимость'])\n",
     "array.insert(0, titles)\n",
     "\n",
     "file = 'sorted_oraders'\n",
     "create_csv_file(data=array, file_name=file)\n",
-    "show_csv_table(file=file)\n",
-    "\n"
+    "show_csv_table(file=file)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Поиск товара по имени"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CSV файл searched_product успешно создан.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Номер заказа</th>\n",
+       "      <th>Дата заказа</th>\n",
+       "      <th>Название товара</th>\n",
+       "      <th>Категория товара</th>\n",
+       "      <th>Количество продаж</th>\n",
+       "      <th>Цена за единицу</th>\n",
+       "      <th>Общая стоимость</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <td>7</td>\n",
+       "      <td>2024-05-16</td>\n",
+       "      <td>Умная колонка Яндекс Станция Миди с Алисой</td>\n",
+       "      <td>Портативная акустика</td>\n",
+       "      <td>8</td>\n",
+       "      <td>16999</td>\n",
+       "      <td>135992</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Номер заказа Дата заказа                             Название товара  \\\n",
+       "             7  2024-05-16  Умная колонка Яндекс Станция Миди с Алисой   \n",
+       "\n",
+       "      Категория товара  Количество продаж  Цена за единицу  Общая стоимость  \n",
+       "  Портативная акустика                  8            16999           135992  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "csv_data = read_data('sorted_oraders')\n",
+    "target = input()\n",
+    "target_index = binary_search(array, target, 2) - 1\n",
+    "\n",
+    "output_array = [\n",
+    "   ['Номер заказа', 'Дата заказа', 'Название товара', 'Категория товара', 'Количество продаж', 'Цена за единицу', 'Общая стоимость'],\n",
+    "   csv_data[target_index]\n",
+    "]\n",
+    "\n",
+    "file = 'searched_product'\n",
+    "create_csv_file(output_array, file_name=file)\n",
+    "show_csv_table(file=file)"
    ]
   }
  ],
